--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
         <title>The Pacman</title>
     </head>
     <body>
-        <div id="app" class="container"></div>
+        <div id="app" class="container">
+            <div class="stage"></div>
+        </div>
 
         <script src="/js/Pacman.js"></script>
         <script src="/js/index.js"></script>
