--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
         <title>The Pacman</title>
     </head>
     <body>
-        <div id="app" class="container">
-            <div class="stage"></div>
-        </div>
-
+        <div id="app" class="container"></div>
+        <script src="/js/Stage.js"></script>
+        <script src="/js/Entity.js"></script>
         <script src="/js/Pacman.js"></script>
         <script src="/js/index.js"></script>
     </body>
